# sboc

./: CMakeLists.txt  README.md
examples/: basic.cpp  errors.cpp  main.cpp
include/: sboc.hpp  serialization_concepts.hpp
include/experimental/: concepts_ts.hpp
